質問のためいったんコミット

--- a/app/views/site/facility/list/_List.scala.html
+++ b/app/views/site/facility/list/_List.scala.html
@@ -46,7 +46,7 @@
   <div class="content__section content">
     @for(facility <- vv.facilities) {
       <article class="facility-list-item">
-        <a href="#">
+        <a href="/facility/edit/@facility.id">
           <div class="item-panel__wrapper">
             <header class="facility-item__header">
               <div class="name">
