演習１完成　なおcssはまだ

--- a/app/views/site/facility/edit/_Edit.scala.html
+++ b/app/views/site/facility/edit/_Edit.scala.html
@@ -10,6 +10,7 @@
             @helper.inputText(form("description"), 'placeholder -> facility.get.description)
             <button>編集</button>
         <div>
+        <div><a href="/facility/list">一覧ページに戻る</a></div>
     }
 } else {
     <div>存在しないidです</div>
