list.htmlに追加するためのボタンを設置

--- a/app/views/site/facility/list/_List.scala.html
+++ b/app/views/site/facility/list/_List.scala.html
@@ -42,6 +42,8 @@
     }
   </div>
 
+  <div><a href="/facility/add">新しく追加</a></div>
+
   @** --[ 一覧 ]-------------------------------------------------------- *@
   <div class="content__section content">
     @for(facility <- vv.facilities) {
