createからaddに変更

--- a/app/views/site/facility/add/Main.scala.html
+++ b/app/views/site/facility/add/Main.scala.html
@@ -13,5 +13,5 @@
 
 @** テンプレート: コンテンツ *@
 @tplContent = {
-    @views.html.site.facility.create._Create(form)
+    @views.html.site.facility.add._Add(form)
 }
