facilityのcrud完成 リファクタが必要

--- a/app/views/site/facility/edit/_Edit.scala.html
+++ b/app/views/site/facility/edit/_Edit.scala.html
@@ -11,6 +11,7 @@
             <button>編集</button>
         <div>
         <div><a href="/facility/list">一覧ページに戻る</a></div>
+        <div><a href="/facility/delete/@facility.get.id.get">削除</a></div>
     }
 } else {
     <div>存在しないidです</div>
