--- a/app/views/site/facility/list/_List.scala.html
+++ b/app/views/site/facility/list/_List.scala.html
@@ -38,11 +38,11 @@
         <button class="button" type="submit">
           <span class="submit__text">検索</span>
         </button>
+        <button class="button"><a href="/facility/add" class="form__section">追加</a></button>
       </div>
     }
   </div>
 
-  <div><a href="/facility/add">新しく追加</a></div>
 
   @** --[ 一覧 ]-------------------------------------------------------- *@
   <div class="content__section content">
