--- a/app/views/site/facility/add/_Add.scala.html
+++ b/app/views/site/facility/add/_Add.scala.html
@@ -16,6 +16,7 @@
         @helper.inputText(form("name"))
         @helper.inputText(form("address"))
         @helper.inputText(form("description"))
-        <button>追加</button>
+        <button class="button">追加</button>
+        <button class="button"><a href="/facility/list">戻る</a></button>
     <div>
 }
