殆どのエラーを解消

--- a/app/views/site/organization/list/Main.scala.html
+++ b/app/views/site/organization/list/Main.scala.html
@@ -12,5 +12,5 @@
 
 @** テンプレート: コンテンツ *@
 @tplContent = {
-  @views.html.site.facility.list._List(vv)
+  @views.html.site.organization.list._List(vv)
 }
