質問のためpush

--- a/app/views/site/organization/list/_List.scala.html
+++ b/app/views/site/organization/list/_List.scala.html
@@ -4,6 +4,6 @@
 
 <ul>
     @for(organizations <- vv.organizations) {
-        <li>organizations.name</li>
+        <li>@organizations.name</li>
     }
 </ul>
