organizationの追加をできるように

--- a/app/views/site/organization/list/Main.scala.html
+++ b/app/views/site/organization/list/Main.scala.html
@@ -5,7 +5,7 @@
 @(vv: SiteViewValueOrganizationList)(implicit messages: play.api.i18n.Messages)
 @views.html.common.layout.Default(vv.layout) {
   @views.html.common.layout.ContentLayout(
-    id      = "site-facility-list",
+    id      = "site-organization-list",
     content = tplContent
   )
 }
