--- a/app/views/site/organization/list/_List.scala.html
+++ b/app/views/site/organization/list/_List.scala.html
@@ -1,6 +1,10 @@
 @import model.site.organization.SiteViewValueOrganizationList
+@import persistence.organization.model.OrganizationAdd
+
 
 @(vv: SiteViewValueOrganizationList)(implicit messages: play.api.i18n.Messages)
+
+<button class="button"><a href="/organization/add">組織を追加</a></button>
 
 <ul>
     @for(organizations <- vv.organizations) {
