organizationのcrudを制作　見た目はこれから

--- a/app/views/site/organization/add/_Add.scala.html
+++ b/app/views/site/organization/add/_Add.scala.html
@@ -15,7 +15,7 @@
         )
         @helper.inputText(form("name"))
         @helper.inputText(form("address"))
-        <button class="button">編集</button>
+        <button class="button">制作</button>
         <button class="button"><a href="/organization/list">一覧に戻る</a></button>
     </div>
 }
