--- a/public/app/main.css
+++ b/public/app/main.css
@@ -792,3 +792,22 @@ h1, h2, h3, h4, h5, h6 {
       font-style: italic;
       font-family: "Roboto", sans-serif;
       letter-spacing: 3px; }
+.organization-list {
+  display: flex;
+  flex-direction: column;}
+  .organization-wrapper {
+    width: 50vw;
+    margin: 0 auto;
+    padding: 1vh;
+    /* background: gray; */
+  }
+  .organization-container {
+    height: 10vh;
+    border: solid 1px;
+    flex-direction: column;
+    }
+    .organization-element {
+      height: 5vh;
+      line-height: 5vh;
+      padding: 0 4vh;
+    }
