facilityのルーティング周りの修正とリファクタ

--- a/app/views/site/facility/edit/_Edit.scala.html
+++ b/app/views/site/facility/edit/_Edit.scala.html
@@ -3,14 +3,14 @@
 
 @(facility: Option[Facility], form: Form[FacilityEdit])(implicit messages: play.api.i18n.Messages)
 @if(facility.isEmpty == false) {
-    @helper.form( action = controllers.facility.routes.FacilityController.edit(facility.get.id.get)) {
+    @helper.form( action = controllers.facility.routes.FacilityController.update(facility.get.id.get)) {
         <div>
             @helper.inputText(form("name"), 'placeholder -> facility.get.name)
             @helper.inputText(form("address"), 'placeholder -> facility.get.address)
             @helper.inputText(form("description"), 'placeholder -> facility.get.description)
             <button class="button">編集</button>
-            <button class="button"><a href="/facility/list">戻る</a></button>
-            <button class="button"><a href="/facility/delete/@facility.get.id.get ">削除</a></button>
+            <button class="button"><a href="/facility/show/@facility.get.id.get">戻る</a></button>
+            <button class="button"><a href="/facility/delete/@facility.get.id.get">削除</a></button>
         <div>
     }
 } else {
