--- a/app/views/site/organization/show/_Show.scala.html
+++ b/app/views/site/organization/show/_Show.scala.html
@@ -10,7 +10,8 @@
 
 <div class="organization-wrapper">
     <div class="organization-container">
-        <div class="organization-element">名前: @vv.organization.get.name</div>
+        @** なぜnameをlocationIdにしないと取れないのか *@
+        <div class="organization-element">名前: @vv.organization.get.locationId</div>
         <div class="organization-element">住所: @vv.organization.get.address</div>
     </div>
 </div>
